--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ body
 
 
 h1{ color: white; font-family:'Open Sans Condensed', sans-serif;font-size: 46px; font-weight: 100;
-	letter-spacing: 1px; text-shadow: -3px 0 black, 0 1px black, 1px 0 black, 0 -1px black;}
+	letter-spacing: 1px; text-shadow: -3px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	margin-top:60px;}
 
 h2{
 	font-size: bold;
