--- a/style.css
+++ b/style.css
@@ -50,8 +50,7 @@ body
 /*limit size of all images*/
 
 .content{
-	min-width: 1366px; ;
-	min-width: 768px; ;
+	min-width: 768px;
 }
 
 .content button
@@ -109,15 +108,6 @@ body
 
 
 /* start lihi */
-
-/*body*/
-/*{*/
-/*	font-family: Arial;*/
-/*	color: #067778;*/
-/*	background: url('https://s-media-cache-ak0.pinimg.com/originals/74/85/dd/7485dd35a00469f9bc612cdcdf0e05a2.jpg');*/
-/*	background-position: center;*/
-
-/*}*/
 
 .loginform {
 	width: 400px;
@@ -251,12 +241,12 @@ h3
 }
 
 
-label {
+.registerform label {
 	display: block;
 	margin: 10px 0;
 }
 
-label.error {
+.registerform label.error {
 	color: #140303;
 	margin: 10px 0;
 	font-size: 14px;
@@ -274,6 +264,12 @@ label.error {
 .keys{
 	width: 60px;
 	height: 20px;
+}
+
+#canvas{
+	border: 10px  double lightskyblue;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 
 #loggedInUser{
