--- a/style.css
+++ b/style.css
@@ -305,3 +305,76 @@ c{
 	height:7%;
 	border-radius: 5px;
 }
+
+#dialogoverlay{
+	display: none;
+	opacity: .6;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	background: #FFF;
+	width: 100%;
+	z-index: 10;
+}
+#dialogbox{
+	display: none;
+	position: fixed;
+	background: #000;
+	border-radius:1px;
+	width:550px;
+	z-index: 10;
+}
+#dialogbox > div{ background:#FFF; margin:2px; }
+#dialogbox > div > #dialogboxhead{ background: #262626; font-size:19px; padding:10px; color:#CCC; }
+#dialogbox > div > #dialogboxbody{ background: #262626; padding:20px; color:#FFF; }
+#dialogbox > div > #dialogboxfoot{ background: #262626; padding:10px; text-align:center; }
+
+/*model dialog*/
+
+#About{
+	width:50%;
+	height:60%;
+	background: #ffffe6;
+}
+/*#about {*/
+/*	position: fixed;*/
+/*	font-family: Arial, Helvetica, sans-serif;*/
+/*	top: 0;*/
+/*	right: 0;*/
+/*	bottom: 0;*/
+/*	left: 0;*/
+/*	background: rgba(0, 0, 0, 0.8);*/
+/*	z-index: 99999;*/
+/*	opacity:0;*/
+/*	-webkit-transition: opacity 400ms ease-in;*/
+/*	-moz-transition: opacity 400ms ease-in;*/
+/*	transition: opacity 400ms ease-in;*/
+/*	pointer-events: none;*/
+/*}*/
+/*#about:target {*/
+/*	opacity:1;*/
+/*	pointer-events: auto;*/
+/*}*/
+
+/*}*/
+.close {
+	background: #282e2f;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+.close:hover {
+	background: #282e2f;
+}
