--- a/style.css
+++ b/style.css
@@ -1,328 +1,335 @@
-html {
-	height: 100%;
-	box-sizing: border-box;
+body {
+    font-family: 'Courier New', Courier, monospace;
 }
 
-*,
-*:before,
-*:after {
-	box-sizing: inherit;
-}
-
-body
-{
-	background-color:#262626;
-	text-align: center;
-	/*margin-top:40px;*/
-	font-family: 'Courier New', Courier, monospace;
-	height: 100%;
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 
-.menu
-{
-	top: 0;
-	position: fixed;
-	width: 100%;
-	height: 35px;
-	/*#3e444c*/
-	background-color: rgb(82, 91, 100);
-	border-radius: 5px;
-	border-bottom: 3px solid black;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+@media (min-width: 768px) {
+    .container {
+        display: grid;
+        grid-template-columns: 160px 1fr;
+        grid-template-rows: auto 1fr auto;
+
+    }
 }
-/*menu list elements*/
+
+header {
+    grid-column: span 3;
+    padding: 15px;
+    text-align: center;
+    font-size: 16px;
+    background-color: #262626;
+    color: papayawhip;
+    border-bottom: 2px solid white;
+
+}
+
+main {
+    flex: 1;
+    padding: 20px;
+    background-color: #262626;
+}
+
+.menu{
+    background-color: rgb(63, 70, 77);
+    padding: 15px;
+    border-right:  3px solid black;
+
+}
 .menu li
 {
-	display:inline;
+    display:inline;
 }
-
-
-/*menu buttons*/
 .menu a
 {
-	text-decoration: none;
-	color:#eaefef;
-	display: inline-block;
-	padding: 10px 25px;
-	height:15px;
-	border-radius: 5px;
-	/*border-bottom: 5px solid white;*/
+    text-decoration: none;
+    color:#eaefef;
+    display: inline-block;
+    padding: 10px 25px;
+    height:15px;
+    border-radius: 5px;
+    /*border-bottom: 5px solid white;*/
 }
 .menu a:hover
 {
-	background: rgba(255, 255, 255, 0.747);
-	color:black;
+    background: rgba(255, 255, 255, 0.747);
+    color:black;
 }
-/*limit size of all images*/
-
-.content{
-	min-width: 768px;
-}
-
-.content button
-{
-	display: block;
-	background-color: white;
-	color: black;
-	border: 2px solid #555555;
-}
-
-.content button
-{
-  background-color: #F5D76E;
-  color: black;
+#loggedInUser{
+    color: #dabfa4;
 }
 
 #Welcome{
-	background-image:url(Images/Packman2.png);
-	background-repeat: no-repeat;
-	min-height: 100%;
+    background-image:url(Images/Packman2.png);
+    background-repeat: no-repeat;
+    min-height: 100%;
 }
 
 [id^=welcomeButton]{
-	border-radius: 10px;
-	padding: 10px 50px;
-	font-size:20px;
-	font-family: 'Courier New', Courier, monospace;
-	-webkit-transition-duration: 0.4s; /* Safari */
-	transition-duration: 0.4s;
+    border-radius: 10px;
+    padding: 10px 50px;
+    font-size:20px;
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+.content button
+{
+    background-color: #F5D76E;
+    color: black;
 }
 
 [id^=welcomeButton]:hover{
-	background-color: #ffffe6;
-  	color: black;
+    background-color: #ffffe6;
+    color: black;
 }
 
 #welcomeButtonRegister{
-	position: absolute;
-	top: 300px;
-	left: 960px;
+    position: absolute;
+    top: 300px;
+    left: 960px;
 }
-
-
-/* #welcomeButton1:after{
-	content:'\f2f6';
-	font-family:fontAwesome;
-	padding-left: 10px;
-} */
 
 #welcomeButtonLogin{
-	position: absolute;
-	top: 300px;
-	left: 720px;
+    position: absolute;
+    top: 300px;
+    left: 720px;
 }
 
-
-/* start lihi */
-
-.loginform {
-	width: 400px;
-	height: 400px;
-	position: absolute;
-	left: 50%;
-	margin-left:-175px;
-	border: none;
-	border-radius: 10px;
-	top: 100px;
-	line-height: 5px;
-	text-align: center;
-	/*background-color: #A9E2F3;*/
-	/*background-color: #839470;*/
-	background-color: papayawhip;
-	font-family: 'Courier New', Courier, monospace;
-	-webkit-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+#Login {
+    width: 40%;
+    height: 60%;
+    position: relative;
+    top: 10%;
+    left: 25%;
+    border: none;
+    border-radius: 10px;
+    /*top: 100px;*/
+    line-height: 5px;
+    text-align: center;
+    background-color: papayawhip;
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
 
 }
-.registerform
+#Register
 {
-
-	width: 400px;
-	height: 500px;
-	position: absolute;
-	left: 50%;
-	margin-left:-175px;
-	border: none;
-	border-radius: 10px;
-	top: 100px;
-	line-height: 5px;
-	text-align: center;
-	/*background-color: #A9E2F3;*/
-	/*background-color: #839470;*/
-	background-color: papayawhip;
-	font-family: 'Courier New', Courier, monospace;
-	-webkit-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    width: 40%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    left: 25%;
+    border: none;
+    border-radius: 10px;
+    line-height: 2px;
+    text-align: center;
+    background-color: papayawhip;
+    /*box-sizing: border-box;*/
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
 
 }
-.settingForm
+
+#Settings
 {
-	width: 80%;
-	height: 70%;
-	position: absolute;
-	margin-left:-380px;
-	border: none;
-	border-radius: 10px;
-	top: 100px;
-	line-height: 5px;
-	text-align: center;
-	background-color: papayawhip;
-	/*background-color: #839470;*/
-	font-family: 'Courier New', Courier, monospace;
-	-webkit-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
-	box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    width: 100%;
+    height: 100%;
+    position: relative;
+    border: none;
+    border-radius: 10px;
+    line-height: 7px;
+    text-align: center;
+    background-color: papayawhip;
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 36px 1px rgba(0,0,0,0.75);
 }
 
 .whitetop
 {
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 50px;
-	box-shadow: none;
-	background: white;
-	border-radius: 10px 10px 0px 0px;
-	font-family: 'Courier New', Courier, monospace;
-
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 40px;
+    box-shadow: none;
+    background: white;
+    border-radius: 10px 10px 0px 0px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 h3
 {
-	font-family: 'Courier New', Courier, monospace;
-	position: relative;
-	top: 5px;
+    font-family: 'Courier New', Courier, monospace;
+    position: relative;
+    top: 5px;
 }
 
 .mail, .pass , .name , .date
 {
-	position: relative;
-	top: 65px;
-	height: 25px;
-	width: 200px;
-	margin: 10px;
-	border:none;
-	font-size: 16px;
-	/*background-color: #A9E2F3;*/
-	/*background-color: #b3aba1;*/
-	background-color: papayawhip;
-	font-family: 'Courier New', Courier, monospace;
-	border: none;
-	border-bottom: 2px solid white;
-	box-sizing: border-box;
-	transition: all 0.5s ;
+    position: relative;
+    top: 55px;
+    /*height: 25px;*/
+    /*width: 200px;*/
+    margin: 8px;
+    border:none;
+    font-size: 16px;
+    background-color: papayawhip;
+    font-family: 'Courier New', Courier, monospace;
+    border: none;
+    border-bottom: 2px solid white;
+    box-sizing: border-box;
+    /*transition: width 0.5s ;*/
 }
 
 .mail:focus, .pass:focus , .name:focus
 {
-	outline: none;
-	border-bottom: 2px solid #e8a71a;
-	width: 250px;
+    outline: none;
+    border-bottom: 2px solid #99726b;
+    width: 250px;
 }
 
 .submit
 {
-	position: relative;
-	top: 100px;
-	width: 160px;
-	height: 30px;
-	border: none;
-	background-color: white;
-	color: #715827;
-	font-size: 15px;
-	font-weight: bold;
-	transition: all 0.5s;
-	font-family: 'Courier New', Courier, monospace;
-	box-sizing: border-box;
-
+    position: relative;
+    top: 60px;
+    width: 160px;
+    height: 30px;
+    border: none;
+    background-color: white;
+    color: #715827;
+    font-size: 15px;
+    font-weight: bold;
+    transition: width 0.5s;
+    font-family: 'Courier New', Courier, monospace;
+    box-sizing: border-box;
 }
+
 .submit:hover
 {
-	/*background-color: #088A85;*/
-	background-color: #e8a71a;
-	color: white;
-	border-radius: 10px;
+    /*background-color: #088A85;*/
+    background-color: #99726b;
+    color: white;
+    border-radius: 10px;
 }
 
-
 .registerform label {
-	display: block;
-	margin: 10px 0;
+    display: block;
+    position: relative;
+    margin: 12px 10px;
 }
 
 .registerform label.error {
-	color: #140303;
-	margin: 10px 0;
-	font-size: 14px;
+    position: relative;
+    display: block;
+    color: #140303;
+    margin: 11px 10px;
+    font-size: 12px;
 }
 
 #settingsTable {
-	margin-top:70px;
+    margin-top:70px;
+    left: 0;
 }
 
 #keysTable{
-	margin-top: 100px;
-	margin-right: 70px;
+    margin-top: 100px;
+    margin-right: 70px;
 }
 
 .keys{
-	width: 60px;
-	height: 20px;
+    width: 60px;
+    height: 20px;
+}
+
+.settingButton{
+    position: relative;
+    width: 160px;
+    height: 30px;
+    top: 50px;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+#NewGameBtn{
+    width: 160px;
+    height: 30px;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    font-weight: bold;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 10px;
+    box-sizing: border-box;
+}
+
+.settingButton:hover,#NewGameBtn:hover
+{
+    background-color: #ce9990;
+    color: white;
+    border-radius: 10px;
 }
 
 #canvas{
-	border: 10px  double lightskyblue;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+    box-sizing: border-box;
+    width: 1200px;
+    height: 600px;
+    position: relative;
+    border: 10px  double lightskyblue;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
-
-#loggedInUser{
-	position: absolute;
-	margin-left: -300px;
-	margin-top: 10px;
-}
-
-.image-gallery-lifes li{
-	 display: inline;
-}
+/*#Game{*/
+/*    position:relative;*/
+/*}*/
 
 #gameDetails li{
-	display: inline;
-	margin-left:20px
-
+    display: inline;
+    margin-left:20px
 }
 
 c{
-	color:rosybrown;
+    color:rosybrown;
 }
 
 #lblScore,#lblTime{
-	width:7%;
-	height:7%;
-	border-radius: 5px;
+    width:7%;
+    height:7%;
+    border-radius: 5px;
 }
 
-#dialogoverlay{
-	display: none;
-	opacity: .6;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	background: #FFF;
-	width: 100%;
-	z-index: 10;
-}
+/*#dialogoverlay{*/
+/*    display: none;*/
+/*    opacity: .6;*/
+/*    position: fixed;*/
+/*    top: 0px;*/
+/*    left: 0px;*/
+/*    background: #FFF;*/
+/*    width: 100%;*/
+/*    z-index: 10;*/
+/*}*/
 #dialogbox{
-	display: none;
-	position: fixed;
-	background: #000;
-	border-radius:1px;
-	width:550px;
-	z-index: 10;
+    border: 5px solid floralwhite;
+    display: none;
+    position: fixed;
+    background: #000;
+    border-radius:1px;
+    width:550px;
+    z-index: 10;
 }
 #dialogbox > div{ background:#FFF; margin:2px; }
 #dialogbox > div > #dialogboxhead{ background: #262626; font-size:19px; padding:10px; color:#CCC; }
@@ -332,9 +339,9 @@ c{
 /*model dialog*/
 
 #About{
-	width:50%;
-	height:60%;
-	background: #ffffe6;
+    width:50%;
+    height:60%;
+    background: #ffffe6;
 }
 /*#about {*/
 /*	position: fixed;*/
@@ -358,23 +365,37 @@ c{
 
 /*}*/
 .close {
-	background: #282e2f;
-	color: #FFFFFF;
-	line-height: 25px;
-	position: absolute;
-	right: -12px;
-	text-align: center;
-	top: -10px;
-	width: 24px;
-	text-decoration: none;
-	font-weight: bold;
-	-webkit-border-radius: 12px;
-	-moz-border-radius: 12px;
-	border-radius: 12px;
-	-moz-box-shadow: 1px 1px 3px #000;
-	-webkit-box-shadow: 1px 1px 3px #000;
-	box-shadow: 1px 1px 3px #000;
+    background: #282e2f;
+    color: #FFFFFF;
+    line-height: 25px;
+    position: absolute;
+    right: -12px;
+    text-align: center;
+    top: -10px;
+    width: 24px;
+    text-decoration: none;
+    font-weight: bold;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
 }
 .close:hover {
-	background: #282e2f;
+    background: #282e2f;
 }
+
+
+
+footer {
+    grid-column: span 3;
+    padding: 12px;
+    text-align: center;
+    font-size: 16px;
+    background-color: #262626;
+    color: papayawhip;
+    border-top:  2px solid white;
+}
+
+
